--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx nodemon app.js"
+    "start": "npx nodemon app.ts"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
-    "prisma": "^3.9.1"
+    "prisma": "^3.9.1",
+    "ts-node": "^10.4.0",
+    "typescript-formatter": "^7.2.2"
   }
 }
