--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.9.1",
+    "socks-proxy-agent": "^6.1.1",
     "telegraf": "^4.6.0"
   },
   "devDependencies": {
